@@ -33,7 +33,7 @@ input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint
 td.filter_title img,
 .search_label img		{padding:3px 7px 0 0; width:12px; height:12px;}
 td.filter_title span,
-.search_label span		{color:#fff; font-size:10px; line-height:16px;}
+.search_label span		{color:#fff; font-size:8px; line-height:16px;}
 
 .search_wrap .chosen-container{width:290px; min-width:290px; max-width:290px;}
 #country_dropmenu .chosen-container, #publisher_dropmenu .chosen-container	{width:460px; min-width:460px; max-width:460px;}
