@@ -302,7 +302,7 @@
 	
 #search_display_sector trim=ends
 	<div class="search_query">
-		<div class="sector">{search_text}</div><span><img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</span>
+		<div class="sect_cat">{search_text}</div><span><img src="{flava}search_category.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</span>
 	</div>
 
 #search_display_status trim=ends
@@ -322,7 +322,7 @@
 	
 #search_display_sector_group trim=ends
 	<div class="search_query">
-		<div class="sect_cat">{search_text}</div><span><img src="{flava}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}</span>
+		<div class="sector">{search_text}</div><span><img src="{flava}search_sector.png" alt="Sector Group icon" width="13" height="13"/>{search_sectorgroup_txt}</span>
 	</div>
 	
 #search_display_year_min trim=ends
