@@ -1,3 +1,9 @@
+Development Portal (2019-12-09 shi)
+==============================
+Fix sector group and category icons and text
+Fix dflat SAVi date div
+
+
 Development Portal (2019-11-21 shi)
 ==============================
 Update all target_blank with noopener and noreferrer
